# marketing-agent

./: .gitignore  README.md  cli.py  env.template  pyproject.toml
ai_agent/: __init__.py  file_reader.py
input/: example.txt  notes.md
marketing_agent/: agent.py  config.py  llm_client.py
